Added stuff for ticket get requests